20260616 yijiakang 【功能完善】新增性能监控 Agent 自动 attach、插件默认配置及本地缓存和 Rust JNI 小数耗时查询，隔离性能监控与录制回放 Agent 配置，自动启动默认仅增强性能监控插件 (20260611143033000523)